--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,217 @@
+html{
+  width: 96%;
+  margin: calc((100vh - 300px)/2) auto ;
+  display: flex;           
+  flex-direction: column;  
+  justify-content: center;  
+  align-items: center;    
+  background-color: rgba(100, 125, 125, 0.26);
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 2rem;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100px;
+  min-width: 90vw;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 0.3em;
 }
 
-.App-link {
-  color: #61dafb;
+.header1 {
+  background-color: #282c34;
+  min-height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  border-radius: 0.5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divitem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+fieldset.styleindex {
+  height: 87vh;
+  overflow: scroll;
+  
+}
+.fieldstyle {
+  border-radius: '0.4em';
+  margin-top: 0.5em;
+  background-color: rgba(100,125,100,0.26);
+  border-radius: 0.4em;
+  color: rgb(9,35,135);
+}
+.fieldstyle>legend {
+  background-color: rgba(125,125,100,0.8);
+  color: white;
+  padding: 0 0.3em 0 0.3em;
+  border-radius: 0.3em;
+}
+
+header ul {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: space-around;
+  list-style: none;
+}
+header ul li {
+  flex: auto;
+  background-color: lightblue;
+  border-radius: 0.3em;
+  margin-right: 0.3em;
+  padding: 0 0.3em 0 0.3em;
+}
+header ul li a {
+  text-decoration-line: none;
+}
+.appcontent {
+  display: flex;
+  margin-bottom: 5.5em;
+}
+fieldset {
+  border-radius: 0.3em;
+}
+a:visited {
+  color: inherit;
+}
+.homeimage {
+  width: 300px;
+  height: 200px;
+  background-size:cover;
+  background-image: url(Gauguin_Gogh.jpg);
+  /* background-position:50% 50%; */
+  background-repeat:no-repeat;  
+}
+.home1image {
+  width: 500px;
+  height: 300px;
+  background-size:cover;
+  background-image: url(Gauguin_Gogh.jpg);
+  /* background-position:50% 50%; */
+  background-repeat:no-repeat;  
+}
+.navbarbackground {
+   background-color: rgba(110, 125, 100, 0.3);
+   padding: 0 1em 0 3em;
+   width: 90vw;
+   border-radius: 0 0 0.35em 0.35em;
+}
+.navbardiv {
+  position: fixed;
+  top: -1em;
+  left: 3vw;
+}
+.navbar {
+  
+  margin-bottom: 0.5em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+}
+.navfooter {
+  width: 96%;
+  margin: auto;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar a {
+  text-decoration: none;
+  text-align: center;
+  background-color: rgba(45, 65, 100, 0.88);
+  color: white;
+  padding: 0.1em 0.3em 0.1em 0.3em;
+  border-radius: 0.22em;
+  margin-right: 1em;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+  background-color: rgba(45, 65, 100, 0.45);
+}
+.navbar a:active {
+  text-decoration: none;
+  background-color: rgba(45, 65, 100, 0.75);
+}
+
+.noteform {
+  padding: 3em 10em 3em 3em;
+  display: inline;
+  border-radius: 0.3em;
+  background-color: rgba(100, 125, 100, 0.3);
+}
+.noteformfieldtext {
+  flex: 1;
+  max-height: 500px;
+}
+.noteformfield label {
+  font-weight: bold;
+}
+.noteformfield input, 
+.noteformfield textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;;
+}
+.noteformfield textarea {
+  height: 100px;
+  max-height: 500px;
+}
+.noteformfield select {
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 1.34rem;
+  font-weight: bold;
+  color: #aaa;
+  background-color: white;
+  margin: 0.3em;
+}
+.noteformbuttons input {
+  padding: 15px;
+  background-color: #66f;
+  border: none;
+  border-radius: 0.22em;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+.noteformbuttons a {
+  display: inline-block;
+  padding: 15px;
+  text-decoration: none;
+}
+.noteformbuttons a:hover {
+  text-decoration: underline;
+}
+a {
+  margin-left: 1em;
+}
+.navbarbuttons {
+  text-align: center;
 }
